--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "author": "Anastasia Gorlina",
   "license": "ISC",
-  
-    "devDependencies": {
+  "devDependencies": {
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
@@ -21,6 +20,7 @@
     "body-parser": "^1.19.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-rate-limit": "^6.3.0",
